--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,13 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MenueActivity">
+    tools:context=".activities.MenuActivity">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="421dp"
         android:layout_height="95dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="28dp"
         android:background="#FF0202"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +25,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.309">
+        app:layout_constraintVertical_bias="0.322">
 
         <ImageButton
             android:id="@+id/startButton"
